Refactor and correct other domains to make it work with weekly_plan and Postgres
